k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: final04ka-prod
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: final04ka-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: app
          image: ghcr.io/somecrab/final04ka:0.2.1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet: { path: /health, port: 8000, httpHeaders: [ { name: Host, value: api.wiru.site } ] }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health, port: 8000, httpHeaders: [ { name: Host, value: api.wiru.site } ] }
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: tmp
          emptyDir: {}
