k8s/postfix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  namespace: final04ka-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfix
  template:
    metadata:
      labels:
        app: postfix
    spec:
      volumes:
        - name: dkim-secret
          secret:
            secretName: postfix-dkim
        - name: dkim-keys # writable
          emptyDir: {}
      containers:
        - name: postfix
          image: boky/postfix:latest
          ports:
            - name: smtp
              containerPort: 25
            - name: submission
              containerPort: 587
          volumeMounts:
            - name: dkim-keys
              mountPath: /etc/opendkim/keys
              readOnly: true
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: postfix
  namespace: final04ka-prod
spec:
  selector:
    app: postfix
  ports:
    - name: smtp
      port: 25
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
